2008-08-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: implement a "yarp resource"
	command, which uses the ResourceFinder to locate configuration
	files and other resource files.  Handy for testing your
	search path.  Run "yarp resource" for some tips on usage.

	* src/libYARP_OS/include/yarp/Companion.h: add hook for
	"yarp resource" command

	* src/libYARP_OS/src/ResourceFinder.cpp: improve search for 
	policy file

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: some changes
	to API, more to come

2008-8-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/include/yarp/os/RateThread.h/RateThread.cpp:
	methods getEstPeriod()/getEstUsed() now returns average and std

2008-8-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/include/yarp/os/all.h: added RateThread.h

2008-07-28  Lorenzo Natale <nat@liralab.it>
	* src/yarp/libYARP_dev/include/yarp/dev/DataSource.h: 
	removed IPreciselyTimed interface
	* src/yarp/libYARP_dev/include/yarp/dev/PreciselyTimed.h:
	added IPreciselyTimedInterface
	* src/yarp/libYARP_dev/include/yarp/dev/ServerInertial.h
	* src/yarp/libYARP_dev/src/ServerInertial.cpp: added timestamps in
	server inertial device.

2008-07-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: "yarp exists" now works
	also with two arguments.  With two arguments, it tests if 
	a connection exists between the two ports.  With one argument,
	it does as always (checks if port exists)

	* src/libYARP_OS/src/Network.cpp: implement test for whether
	a connection exists between two ports.

2008-07-28  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/cuda/*: Now CUDA driver requires two variables to 
	be set with ccmake:
	-CUDA_NUMTHREADS: the number of threads per block to be run on the GPU
	-CUDA_NUMTHREADBLOCKS: the number of thread blocks to be run on the GPU
	With this new format the driver can be tuned for better performance on 
	every CUDA compatible GPU 