@@ -1,3 +1,10 @@
+2008-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/ResourceFinder.cpp: implement "--from config.ini"
+	for loading settings into ResourceFinder from a file.  This is
+	like the "--file config.ini" behavior of the Module class and
+	yarpdev etc.  The names are inconsistent for complicated reasons.
+
 2008-08-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/Companion.cpp: implement a "yarp resource"
